--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+/[Aa]ssets/[Ll]ogs/
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
@@ -63,5 +65,7 @@ sysinfo.txt
 crashlytics-build.properties
 
 .vscode
+
+
 
 .DS_Store
